[gd_scene load_steps=6 format=3 uid="uid://co6006cmx0yn8"]

[ext_resource type="Texture2D" uid="uid://bw0hgi6qypox3" path="res://графика/спрайты/стартовый дом.png" id="1_rlt1u"]
[ext_resource type="Script" path="res://scens/house.gd" id="1_x03gf"]
[ext_resource type="Texture2D" uid="uid://c08ych1avv088" path="res://графика/спрайты/диологовое окно для двери.png" id="3_1xuhl"]
[ext_resource type="Texture2D" uid="uid://c414vh3ejwl2k" path="res://графика/button/icons8-q-50.png" id="4_dk5xq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3hud"]
radius = 9.0
height = 26.0

[node name="house" type="Node2D"]
script = ExtResource("1_x03gf")

[node name="СтартовыйДом" type="Sprite2D" parent="."]
position = Vector2(-3, -52)
scale = Vector2(1.03, 1.03)
texture = ExtResource("1_rlt1u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 13)
shape = SubResource("CapsuleShape2D_r3hud")

[node name="diologDor" type="Sprite2D" parent="."]
visible = false
position = Vector2(39, 10)
scale = Vector2(0.223333, 0.223333)
texture = ExtResource("3_1xuhl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="q" type="TextureButton" parent="CanvasLayer"]
offset_left = 1034.0
offset_top = 548.0
offset_right = 1111.0
offset_bottom = 625.0
texture_normal = ExtResource("4_dk5xq")
stretch_mode = 5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="button_down" from="CanvasLayer/q" to="." method="_on_q_button_down"]
[connection signal="button_up" from="CanvasLayer/q" to="." method="_on_q_button_up"]
